--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.19.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "request-promise": "^4.2.6"
   }
 }
